--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b4431b4b",
+   "id": "e5aae116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,332 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "aa0f81e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the requests library\n",
+    "import requests\n",
+    "\n",
+    "# Import the API key\n",
+    "from config import weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fbeea593",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?&units=Imperial&appid=c23d4f0e993175b16051d0d4771c9a4f\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Starting URL for Weather Map API Call.\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?&units=Imperial&appid=\" + weather_api_key\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "04a7ad4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?&units=Imperial&appid=c23d4f0e993175b16051d0d4771c9a4f&q=Boston\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "print(city_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3bf03b36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a 'Get' request for the city weather\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ad13c5d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":602,\"main\":\"Snow\",\"description\":\"heavy snow\",\"icon\":\"13d\"},{\"id\":741,\"main\":\"Fog\",\"description\":\"fog\",\"icon\":\"50d\"}],\"base\":\"stations\",\"main\":{\"temp\":17.26,\"feels_like\":4.66,\"temp_min\":14.95,\"temp_max\":21.16,\"pressure\":995,\"humidity\":89},\"visibility\":402,\"wind\":{\"speed\":13,\"deg\":13,\"gust\":31},\"snow\":{\"1h\":4.86},\"clouds\":{\"all\":100},\"dt\":1643478216,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1643457649,\"sunset\":1643493224},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the text of the 'Get' request\n",
+    "city_weather.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "00e9881d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 602,\n",
+       "   'main': 'Snow',\n",
+       "   'description': 'heavy snow',\n",
+       "   'icon': '13d'},\n",
+       "  {'id': 741, 'main': 'Fog', 'description': 'fog', 'icon': '50d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 17.26,\n",
+       "  'feels_like': 4.66,\n",
+       "  'temp_min': 14.95,\n",
+       "  'temp_max': 21.16,\n",
+       "  'pressure': 995,\n",
+       "  'humidity': 89},\n",
+       " 'visibility': 402,\n",
+       " 'wind': {'speed': 13, 'deg': 13, 'gust': 31},\n",
+       " 'snow': {'1h': 4.86},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1643478216,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1643457649,\n",
+       "  'sunset': 1643493224},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the JSON text of the 'Get' request\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ec32f17d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City Weather found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint url for a city\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City Weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7cf8b1db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 602,\n",
+       "   'main': 'Snow',\n",
+       "   'description': 'heavy snow',\n",
+       "   'icon': '13d'},\n",
+       "  {'id': 741, 'main': 'Fog', 'description': 'fog', 'icon': '50d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 17.26,\n",
+       "  'feels_like': 4.66,\n",
+       "  'temp_min': 14.95,\n",
+       "  'temp_max': 21.16,\n",
+       "  'pressure': 995,\n",
+       "  'humidity': 89},\n",
+       " 'visibility': 402,\n",
+       " 'wind': {'speed': 13, 'deg': 13, 'gust': 31},\n",
+       " 'snow': {'1h': 4.86},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1643478216,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1643457649,\n",
+       "  'sunset': 1643493224},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3a69330e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the JSON data\n",
+    "boston_data = city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "72fb4d00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'US'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data['sys']['country']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8016cb72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1643478216"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data[\"dt\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0e075eba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.3584 -71.0598 21.16 89 100 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "lat = boston_data[\"coord\"][\"lat\"]\n",
+    "lng = boston_data[\"coord\"][\"lon\"]\n",
+    "max_temp = boston_data[\"main\"][\"temp_max\"]\n",
+    "humidity = boston_data[\"main\"][\"humidity\"]\n",
+    "clouds = boston_data[\"clouds\"][\"all\"]\n",
+    "wind = boston_data[\"wind\"][\"speed\"]\n",
+    "print(lat, lng, max_temp, humidity, clouds, wind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e7a0f14f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-01-29 17:43:36'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the datetime module from the datatime library\n",
+    "from datetime import datetime\n",
+    "# Get the date from the JSON file.\n",
+    "date = boston_data[\"dt\"]\n",
+    "# Convert the UTC date to a date format with year, month, day, hours, minutes, seconds\n",
+    "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2733ebc6",
+   "id": "696e296a",
    "metadata": {},
    "outputs": [],
    "source": []
