Adding scatter plots

--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e5aae116",
+   "id": "a3e2708b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "aa0f81e5",
+   "id": "ca3b8304",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fbeea593",
+   "id": "79aff27d",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "04a7ad4f",
+   "id": "540548d2",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3bf03b36",
+   "id": "eb94d537",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ad13c5d0",
+   "id": "1f5e092c",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "00e9881d",
+   "id": "2e95a36c",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ec32f17d",
+   "id": "a14c1389",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7cf8b1db",
+   "id": "ca5f2756",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3a69330e",
+   "id": "33f0581d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "72fb4d00",
+   "id": "cb672886",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8016cb72",
+   "id": "0e4e6fbd",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0e075eba",
+   "id": "e330b630",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e7a0f14f",
+   "id": "cfdb0ca6",
    "metadata": {},
    "outputs": [
     {
@@ -388,8 +388,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "id": "862090b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'01/29/22'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.strftime(\"%x\")\n",
+    "today\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "696e296a",
+   "id": "862d50ae",
    "metadata": {},
    "outputs": [],
    "source": []
