--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -869,6 +869,7 @@
     "        city_clouds = city_weather[\"clouds\"][\"all\"]\n",
     "        city_wind = city_weather[\"wind\"][\"speed\"]\n",
     "        city_country = city_weather[\"sys\"][\"country\"]\n",
+    "        city_description = city_weather[\"weather\"][\"description\"]\n",
     "        # Convert the date to ISO standard.\n",
     "        city_date = datetime.utcfromtimestamp(city_weather[\"dt\"]).strftime('%Y-%m-%d %H:%M:%S')\n",
     "        # Append the city information into city_data list.\n",
@@ -880,6 +881,7 @@
     "                          \"Cloudiness\": city_clouds,\n",
     "                          \"Wind Speed\": city_wind,\n",
     "                          \"Country\": city_country,\n",
+    "                          \"Current Description\": city_description,\n",
     "                          \"Date\": city_date})\n",
     "\n",
     "# If an error is experienced, skip the city.\n",
